--- a/templates/browse.html.hbs
+++ b/templates/browse.html.hbs
@@ -1,5 +1,6 @@
 <div class="post-body">
-	<a href="/">Home</a><br><br>
+	<h2 class="post-title">Recent Posts</h2>
+
 	{{#each content.items as |post| ~}}
 		<a class="browse-summary" href="/{{post.id}}">
 			<div>
